		Fixed base attack notification playing when allied engineers repaired your buildings.
		Improved the ingame chat interface and input, with it defaulting to Team Chat.
		Redesigned the settings panel.
		Re-added move flashes.
		Added a setting to always display unit status bars (can also be toggled by hotkey).
		Added a setting for team health bar colors.
	Asset Browser:
		Fixed crashes when trying to load invalid filenames or sprites with just 1 frame.
		Added support for all sprite types.
		Added palette chooser and colorpicker dropdown boxes.
		Overhauled layout.
	Red Alert:
		Added MAD Tank.
		Fixed a crash in Monster Tank Madness.
		Fixed medics sometimes healing enemies.
		Reduced Giant Ant selection box size.
		Fixed paradrop description.
		Various balance adjustments:
			Uparmored Mobile Radar Jammer to heavy.
			Uparmored Mobile Gap Generator to heavy, increased its shroud generation range from 4 to 6, and reduced its price from $1500 to $1200.
			Reduced Gap Generator price from $1000 to $800.
			Made Construction Yard sellable again.
			Reduced MCV build time from 1 minute to 32 seconds.
			No-base MCV crate chance reduced from ~100% to ~70%.
			Introduced a maximum build radius of 16 cells from the nearest friendly Construction Yard.
			Increased movement speeds of Rocket Soldier, Flamethrower, and Tesla Trooper from 3 to 4.
			Reduced Tesla Trooper price from $500 to $400.
			Increased Artillery price from $600 to $800, and increased its health from 75 to 100.
			Increased V2 Rocket price from $700 to $900, reduced its movement speed from 7 to 6, increased its health from 150 to 200, reduced its warhead damage against primary base structures, and increased its rate of fire.
			Increased Hind damage from 20 to 30, and introduced a small additional damage bonus against infantry.